syntax = "proto3";

option csharp_namespace = "Arcus.GRPC"; // Adjust namespace as necessary

import "google/protobuf/timestamp.proto";  // To use a timestamp for the date

service ActionsService {
  rpc List (ListRequest) returns (ListResponse);
}

message ListRequest {
  string filters_json = 1;
}

message ListResponse {
  int32 count = 1; 
  repeated FileRecord files = 2;
}

message FileRecord {
  string file_name = 1;                      // The file name
  google.protobuf.Timestamp date = 2;        // The date associated with the file
  repeated string keywords = 3;              // Array of keywords
  FileStatus status = 4;
}

enum FileStatus {
  UNKNOWN = 0;    // Default value (required)
  PENDING = 1;
  VALID = 2;
  ERROR = 3;
}